--- a/js/ES6/es6基础知识梳理1.md
+++ b/js/ES6/es6基础知识梳理1.md
@@ -95,13 +95,17 @@ Includes---是否包含   startsWith---是否以。。。开始  endsWith ---是
 
 Array.from() 将两类对象转为真正的数组：类似数组的对象和可遍历的对象
 
+Array.from({a: 1, b: 2})  [1, 2]
+
 Array.of() 用于将一组值转换为数组
+
+Array.of(1, 3, 5)
 
 #### 2.5.3实例对象新增的方法
 
-copyWithin()
+copyWithin(target, start, end)  [start, end]
 
-Find() findIndex()
+Find() findIndex()  找出第一个
 
 Fill()
 
@@ -115,7 +119,9 @@ flatMap() 传入函数对数组进行处理再拉平
 
 #### 2.5.4 排序稳定性
 
-Sort()
+Sort((s1 < s2) => -1)
+
+Sort((s1 > s2) => 1)
 
 ### 2.6   函数的扩展
 
