--- a/js/基础知识/深入.md
+++ b/js/基础知识/深入.md
@@ -18,3 +18,192 @@ function myNew(Fn, ...param) {
 } 
 ```
 
+
+
+# 2.原型和原型链
+
+## 2.1 原型对象、构造函数、实例对象关系
+
+### 导引：
+
+function Foo() {}
+
+var f1 = new Foo(); 
+
+//构造函数：Foo
+
+//实例对象：f1
+
+//原型对象：Foo.prototype
+
+原型对象和实例对象的关系 Foo.prototype = f1.__proto__
+
+原型对象和构造函数的关系 Foo.prototype.constructor = Foo;
+
+实例对象和构造函数的关系: 实例对象可以继承原型对象的constructor属性 （间接关系）      f1.constructor = Foo
+
+原型对象的作用：就是定义所有实例对象的属性和方法
+
+- js继承：通过原型对象实现继承 
+- // js规定，所有对象都有自己的原型对象
+
+**原型链**：对象的原型 => 原型的原型 => 原型的原型的原型 => ... => object.prototype => null根据原型链查找 如果一层层往上查找，所有对象的原型最终都可以找到object.prototype所有对象都继承了object.prototype的方法
+
+### 构造函数
+
+面向对象编程的第一步，就是要生成对象。前面说过，对象是是单个实物的抽象。通常需要一个模板，表示某一类实物的共同特征，然后对象根据这个模板生成。
+
+**JavaScript 语言使用构造函数（constructor）作为对象的模板。所谓”构造函数”，就是专门用来生成实例对象的函数。它就是对象的模板，描述实例对象的基本结构。一个构造函数，可以生成多个实例对象，这些实例对象都有相同的结构。**
+
+构造函数就是一个普通的函数，但是有自己的特征和用法。
+
+```
+`var Dog = function(){    this.name = '阿黄'; }`
+```
+
+上面代码中， `Dog`就是构造函数。为了与普通函数区别，构造函数名字的第一个字母通常大写。构造函数的特点有两个：函数体内使用了`this`关键字，代表了所要生成的对象实例。生成对象的时候，必须使用new命令
+
+### constructor
+
+ 每个对象在创建时都自动拥有一个构造函数属性`contructor`,其中包含了一个指向其构造函数的引用。而这个`constructor`属性实际上继承自原型对象，而constructor也是原型对象唯一的自有属性
+
+```
+function Dog(){  } 
+var d1 = new Dog(); 
+console.log(d1.constructor === Person);//true 
+console.log(d1.__proto__.constructor === Person);//true
+```
+
+### 原型对象
+
+说起原型对象，就要说到**原型对象**、**实例对象**和**构造函数**的三角关系 
+
+接下来以下面两行代码，来详细说明他们的关系
+
+```
+function Foo(){}; 
+var f1 = new Foo();
+```
+
+**构造函数** 
+
+用来初始化新创建的对象的函数是构造函数。在例子中，`Foo`函数是构造函数
+
+**实例对象** 
+
+通过构造函数的new操作创建的对象是实例对象，又通常被称为对象实例。可以用一个构造函数，构造多个实例对象。
+
+下面的`f1`和`f2`就是实例对象
+
+```
+`function Foo(){}; 
+var f1 = new Foo(); 
+var f2 = new Foo(); 
+console.log(f1 === f2);//false`
+```
+
+**原型对象和prototype** 
+
+通过构造函数的new操作创建实例对象后，会自动为构造函数创建`prototype`属性，该属性指向实例对象的原型对象。通过同一个构造函数实例化的多个对象具有相同的原型对象。这个的例子中，Foo.prototype是原型对象
+
+```
+function Foo(){}; 
+Foo.prototype.a = 1;
+var f1 = new Foo; 
+var f2 = new Foo;  
+console.log(Foo.prototype.a);//1 
+console. log(f1.a);//1 
+console.log(f2.a);//1
+```
+
+**prototype属性的作用**
+
+JavaScript继承机制的设计思想就是，原型对象的所有属性和方法，都能被实例对象共享
+
+如何为对象指定原型。JavaScript规定，每个函数都有一个`prototype`属性，指向了一个对象
+
+```
+function  Person(name){    this.name = name; } 
+Person.prototype.age = 18;
+var p1 = new Person('大王'); 
+var p2 = new Person('二王'); 
+console.log(p1.age);//18 
+console.log(p2.age);//18
+```
+
+**总结** 
+
+原型对象的作用，就是定义所有实例对象共享的属性和方法。这也是它被称为原型对象的原因，而实例对象可以视作从原型对象衍生出来的子对象
+
+```
+Person.prototype.sayAge = function(){    
+    console.log('My age is'+ this.age); 
+}
+```
+
+上面代码中，`Person.prototype`对象上面定义了一个`sayAge`方法，这个方法将可以在所有`Person`实例对象上面调用。
+
+
+
+### 原型链 
+
+JavaScript规定，**所有对象都有自己的原型对象(prototype)**。一方面，任何一个对象，都可以充当其它对象的原型；另一方面，由于原型对象也是对象，所以它也有自己的原型。**因此，就会形成一个`原型链`(prototype chain):对象的原型，再到原型的原型**…… 如果一层层的往上寻找，**所有对象的原型最终都可以寻找到`Object.prototype`,即`Object`构造函数的`prototype`属性。也就是说，所有对象都继承了Object.prototype的属性。**这就是所有对象都有`valueof`和`toString`方法的原因，因为这是从`Object.prototype`继承的。 那么，`Object.prototype`对象有没有它的原型呢？回答是**`Object.prototype`的原型是`null`**。`null`没有任何属性和方法，也没有自己的原型。因此，原型链的尽头就是`null`。
+
+
+
+## 总结 
+
+构造函数、原型对象和实例对象之间的关系
+
+实例对象和构造函数之间没有直接联系
+
+```
+`function Foo(){}; var f1 = new Foo();`
+```
+
+以上代码的原型对象是Foo.prototype,实例对象是f1,构造函数是Foo 
+
+原型对象和实例对象的关系
+
+```
+`console.log(Foo.prototype === f1.__proto__);//true` 
+```
+
+原型对象和构造对象的关系
+
+```
+`console.log(Foo.prototype.constructor === Foo);//true` 
+```
+
+而实例对象和构造函数则没有直接关系，间接关系是实例对象可以继承原型对象的constructor属性
+
+```
+`console.log(f1.constructor === Foo);//true` 
+```
+
+如果非要扯实例对象和构造函数的关系，那只能是下面这句代码，实例对象是构造函数的new操作的结果
+
+```
+`var f1 = new Foo;`  
+```
+
+这句代码执行以后，如果重置原型对象，则会打破它们三个的关系
+
+```
+`function Foo(){}; 
+var f1 = new Foo; 
+console.log(Foo.prototype === f1.__proto__);//true console.log(Foo.prototype.constructor === Foo);//true  
+Foo.prototype = {}; 
+console.log(Foo.prototype === f1.__proto__);//false console.log(Foo.prototype.constructor === Foo);//false` 
+```
+
+ 所以，代码顺序很重要 
+
+
+
+# 3.Event Loop
+
+Promise手写题
+
+# 4.防抖和节流
+
