--- a/js/基础知识/基础.md
+++ b/js/基础知识/基础.md
@@ -31,3 +31,780 @@ Boolean()
 - 算术运算  + - * / %   自动转为数值
 
   null -> 0  undefined -> NaN
+
+
+
+# 2.数据类型检测的方式有哪些？
+
+## 2.1 typeof
+
+数组、对象、null 都会被判断为object, 其他判断都准确
+
+## 2.2 instanceof
+
+可以正确判断对象的类型，其内部运行机制是判断在其原型链中能否找到该类型的原型
+
+Instanceof 只能正确判断引用数据类型，而不能判断基本数据类型，instanceof运算符用来测试一个对象在其原型链中是否存在一个构造函数的prototype属性
+
+## 2.3 constructor
+
+首先先明确。constructor是原型上的属性，实例继承自原型，所以实例上也能直接访问此属性。
+首先看下contructor的通用性表现
+
+![img](https://img.jbzj.com/file_images/article/202109/202193160801301.png?2021831688)
+
+意外的表现不错，除了null、undefined，有contructor属性的基础（包装）类型或者对象类型都能准确判断。
+
+![img](https://img.jbzj.com/file_images/article/202109/202193160831351.png?20218316838)
+
+能准确区分Array|Object 因为它没有instanceof那样会遍历整条原型链，只是在实例身上进行判断。但也有个致命的缺陷，实例上的这一属性太容易被修改了，一旦修改，这个方法就没有意义了。
+
+## 2.4 Object.prototype.toString.call()
+
+Object.prototype.toString.call()使用Object对象的原型方法toString来判断数据类型：
+
+![img](https://img.jbzj.com/file_images/article/202109/202193160903197.png?2021831699)
+
+同样是检测对象obj调用toString方法，obj.toString()的结果与Object.prototype.toString.call(obj)的结果不一样
+
+这是因为toString是Object的原型方法，而Array、function等类型作为Object的实例，都重写了toString方法。
+
+不同对象类型调用toString方法时，根据原型链的知识，调用的是对应的重写之后的toString方法，而不回去调用Object上原型toString方法（返回对象的具体类型），所以采用obj.toString()不能得到其对象类型，只能将obj转换为字符串类型; 因此，在想要得到对象的具体类型时，应该调用Object原型上的toString方法
+
+# 3.新建对象的方法：Object.create 和 new有什么区别？
+
+## Object.create()
+
+创建一个新对象，使用现有的对象来提供新创建的对象的__proto__。 
+
+### 语法
+
+Object.create(proto, [propertiesObject]);
+
+### 参数
+
+proto：传递一个现在有的对象，即新对象的原型对象（新创建的对象_proto_属性指向现有属性）。第一个参数proto的值为null，那么创建出来的对象是一个{}（空对象）并且没有原型;
+
+```
+Objecr.create({name:'lili'});
+Objecr.create(null);
+```
+
+
+propertiesObject：可选，给新对象添加新属性以及描述器。如果没有指定即创建一个{}，有原型也有继承Object.prototype上的方法。。
+
+返回值
+一个新对象，带着指定的原型对象和属性
+
+### 小试牛刀
+
+//题目
+
+```
+var a = {num:2};
+var b = Object.create(a);
+//问题,以下顺序执行,值是？
+b.num
+b.num++ 
+a.num 
+b.num == 2
+```
+
+Object.create()方法创建一个新对象，使用现有的对象来提供新创建的对象的__proto__。
+也就是b.__proto__ == a
+所以虽然b是个空对象，但会从原型上一直找值。
+b.num == b.__proto__.num == 2
+
+1. b.num++ == 2
+  b.num为2，++运算符是先用后加，这时b.num++还是2
+2. a.num == 2
+  b.num 在执行 ++ 操作之后，这时的b为{num:3},不影响a.
+
+## new Object()
+
+new创建一个用户定义的对象类型的实例或具有构造函数的内置对象的实例。
+
+- 创建一个空的对象（即{}）
+- 链接该对象（即设置该对象的构造函数）到另一个对象
+- 将步骤1新创建的对象作为this的上下文
+- 如果该函数没有返回对象，则返回this
+- new会创建一个新对象，并且这个新对象继承构造函数的prototype，也就是说创建的实例的proto指向构造函数的prototype
+- new Object()会创建一个实例，该实例的proto指向Object的prototype
+
+```
+new Object();
+new Object({name:'lili'});
+```
+
+### 区别
+
+- new Object()继承内置对象Object，而Object.create()则是继承指定对象
+- 可以通过Object.create(null) 创建一个干净的对象，也就是没有原型，而 new Object()创建的对象是 Object的实例，原型永远指向Object.prototype
+
+————————————————
+
+原文链接：https://blog.csdn.net/weixin_44761091/article/details/123528161
+
+# 4.== 和 ===区别，分别在什么情况使用？
+
+## 一、等于操作符
+
+等于操作符用两个等于号（ == ）表示，如果操作数相等，则会返回 `true`
+
+**前面文章，我们提到在`JavaScript`中存在隐式转换。等于操作符（==）在比较中会先进行类型转换，再确定操作数是否相等**
+
+遵循以下规则：
+
+**如果任一操作数是布尔值，则将其转换为数值再比较是否相等**
+
+```
+let result1 = (true == 1); // true
+```
+
+**如果一个操作数是字符串，另一个操作数是数值，则尝试将字符串转换为数值，再比较是否相等**
+
+```
+let result1 = ("55" == 55); // true
+```
+
+**如果一个操作数是对象，另一个操作数不是，则调用对象的 `valueOf() `方法取得其原始值，再根据前面的规则进行比较**
+
+```
+let obj = {valueOf:function(){return 1}}
+let result1 = (obj == 1); // true
+```
+
+**`null `和`undefined`相等**
+
+```
+let result1 = (null == undefined ); // true
+```
+
+**如果有任一操作数是 `NaN` ，则相等操作符返回 `false`**
+
+```
+let result1 = (NaN == NaN ); // false
+```
+
+**如果两个操作数都是对象，则比较它们是不是同一个对象。如果两个操作数都指向同一个对象，则相等操作符返回`true`**
+
+```
+let obj1 = {name:"xxx"}
+let obj2 = {name:"xxx"}
+let result1 = (obj1 == obj2 ); // false
+```
+
+下面进一步做个**小结**：
+
+- 两个都为简单类型，字符串和布尔值都会转换成数值，再比较
+- 简单类型与引用类型比较，对象转化成其原始类型的值，再比较
+- 两个都为引用类型，则比较它们是否指向同一个对象
+- null 和 undefined 相等
+- 存在 NaN 则返回 false
+
+## 二、全等操作符
+
+全等操作符由 3 个等于号（ === ）表示，只有两个操作数在不转换的前提下相等才返回 `true`。即类型相同，值也需相同
+
+```
+let result1 = ("55" === 55); // false，不相等，因为数据类型不同
+let result2 = (55 === 55); // true，相等，因为数据类型相同值也相同
+```
+
+`undefined` 和 `null` 与自身严格相等
+
+```
+let result1 = (null === null)  //true
+let result2 = (undefined === undefined)  //true
+```
+
+## 三、区别
+
+相等操作符（==）会做类型转换，再进行值的比较，全等运算符不会做类型转换
+
+```
+let result1 = ("55" === 55); // false，不相等，因为数据类型不同
+let result2 = (55 === 55); // true，相等，因为数据类型相同值也相同
+null` 和 `undefined` 比较，相等操作符（==）为`true`，全等为`false
+let result1 = (null == undefined ); // true
+let result2 = (null  === undefined); // false
+```
+
+### 小结
+
+相等运算符隐藏的类型转换，会带来一些违反直觉的结果
+
+```
+'' == '0' // false
+0 == '' // true
+0 == '0' // true
+
+false == 'false' // false
+false == '0' // true
+
+false == undefined // false
+false == null // false
+null == undefined // true
+
+' \t\r\n' == 0 // true
+```
+
+但在比较`null`的情况的时候，我们一般使用相等操作符`==`
+
+```
+const obj = {};
+
+if(obj.x == null){
+  console.log("1");  //执行
+}
+```
+
+等同于下面写法
+
+```
+if(obj.x === null || obj.x === undefined) {
+    ...
+}
+```
+
+使用相等操作符（==）的写法明显更加简洁了
+
+所以，除了在比较对象属性为`null`或者`undefined`的情况下，我们可以使用相等操作符（==），其他情况建议一律使用全等操作符（===）
+
+# 5.深拷贝浅拷贝的区别？如何实现一个深拷贝？
+
+## 一、数据类型存储
+
+前面文章我们讲到，`JavaScript`中存在两大数据类型：
+
+- 基本类型
+- 引用类型
+
+基本类型数据保存在在栈内存中
+
+引用类型数据保存在堆内存中，引用数据类型的变量是一个指向堆内存中实际对象的引用，存在栈中
+
+## 二、浅拷贝
+
+浅拷贝，指的是创建新的数据，这个数据有着原始数据属性值的一份精确拷贝
+
+如果属性是基本类型，拷贝的就是基本类型的值。如果属性是引用类型，拷贝的就是内存地址
+
+即浅拷贝是拷贝一层，深层次的引用类型则共享内存地址
+
+下面简单实现一个浅拷贝
+
+```
+function shallowClone(obj) {
+    const newObj = {};
+    for(let prop in obj) {
+        if(obj.hasOwnProperty(prop)){
+            newObj[prop] = obj[prop];
+        }
+    }
+    return newObj;
+}
+```
+
+在`JavaScript`中，存在浅拷贝的现象有：
+
+- `Object.assign`
+- `Array.prototype.slice()`, `Array.prototype.concat()`
+- 使用拓展运算符实现的复制
+
+### Object.assign
+
+```
+var obj = {
+    age: 18,
+    nature: ['smart', 'good'],
+    names: {
+        name1: 'fx',
+        name2: 'xka'
+    },
+    love: function () {
+        console.log('fx is a great girl')
+    }
+}
+var newObj = Object.assign({}, fxObj);
+```
+
+### slice()
+
+```
+const fxArr = ["One", "Two", "Three"]
+const fxArrs = fxArr.slice(0)
+fxArrs[1] = "love";
+console.log(fxArr) // ["One", "Two", "Three"]
+console.log(fxArrs) // ["One", "love", "Three"]
+```
+
+### concat()
+
+```
+const fxArr = ["One", "Two", "Three"]
+const fxArrs = fxArr.concat()
+fxArrs[1] = "love";
+console.log(fxArr) // ["One", "Two", "Three"]
+console.log(fxArrs) // ["One", "love", "Three"]
+```
+
+### 拓展运算符
+
+```
+const fxArr = ["One", "Two", "Three"]
+const fxArrs = [...fxArr]
+fxArrs[1] = "love";
+console.log(fxArr) // ["One", "Two", "Three"]
+console.log(fxArrs) // ["One", "love", "Three"]
+```
+
+## 三、深拷贝
+
+深拷贝开辟一个新的栈，两个对象属完成相同，但是对应两个不同的地址，修改一个对象的属性，不会改变另一个对象的属性
+
+常见的深拷贝方式有：
+
+- _.cloneDeep()
+- jQuery.extend()
+- JSON.stringify()
+- 手写循环递归
+
+### _.cloneDeep()
+
+```
+const _ = require('lodash');
+const obj1 = {
+    a: 1,
+    b: { f: { g: 1 } },
+    c: [1, 2, 3]
+};
+const obj2 = _.cloneDeep(obj1);
+console.log(obj1.b.f === obj2.b.f);// false
+```
+
+### jQuery.extend()
+
+```
+const $ = require('jquery');
+const obj1 = {
+    a: 1,
+    b: { f: { g: 1 } },
+    c: [1, 2, 3]
+};
+const obj2 = $.extend(true, {}, obj1);
+console.log(obj1.b.f === obj2.b.f); // false
+```
+
+### JSON.stringify()
+
+```
+const obj2=JSON.parse(JSON.stringify(obj1));
+```
+
+但是这种方式存在弊端，会忽略`undefined`、`symbol`和`函数`
+
+```
+const obj = {
+    name: 'A',
+    name1: undefined,
+    name3: function() {},
+    name4:  Symbol('A')
+}
+const obj2 = JSON.parse(JSON.stringify(obj));
+console.log(obj2); // {name: "A"}
+```
+
+### 循环递归
+
+```
+function deepClone(obj, hash = new WeakMap()) {
+  if (obj === null) return obj; // 如果是null或者undefined我就不进行拷贝操作
+  if (obj instanceof Date) return new Date(obj);
+  if (obj instanceof RegExp) return new RegExp(obj);
+  // 可能是对象或者普通的值  如果是函数的话是不需要深拷贝
+  if (typeof obj !== "object") return obj;
+  // 是对象的话就要进行深拷贝
+  if (hash.get(obj)) return hash.get(obj);
+  let cloneObj = new obj.constructor();
+  // 找到的是所属类原型上的constructor,而原型上的 constructor指向的是当前类本身
+  hash.set(obj, cloneObj);
+  for (let key in obj) {
+    if (obj.hasOwnProperty(key)) {
+      // 实现一个递归拷贝
+      cloneObj[key] = deepClone(obj[key], hash);
+    }
+  }
+  return cloneObj;
+}
+```
+
+## 四、区别
+
+下面首先借助两张图，可以更加清晰看到浅拷贝与深拷贝的区别
+
+[![img](https://camo.githubusercontent.com/6db4a3b2656d1cab077674b07e01b233bbdb550a9555d1a4ebd3845ba8a2fbf7/68747470733a2f2f7374617469632e7675652d6a732e636f6d2f64393836326330302d363962382d313165622d616239302d6439616538313462323430642e706e67)](https://camo.githubusercontent.com/6db4a3b2656d1cab077674b07e01b233bbdb550a9555d1a4ebd3845ba8a2fbf7/68747470733a2f2f7374617469632e7675652d6a732e636f6d2f64393836326330302d363962382d313165622d616239302d6439616538313462323430642e706e67)
+
+从上图发现，浅拷贝和深拷贝都创建出一个新的对象，但在复制对象属性的时候，行为就不一样
+
+浅拷贝只复制属性指向某个对象的指针，而不复制对象本身，新旧对象还是共享同一块内存，修改对象属性会影响原对象
+
+```
+// 浅拷贝
+const obj1 = {
+    name : 'init',
+    arr : [1,[2,3],4],
+};
+const obj3=shallowClone(obj1) // 一个浅拷贝方法
+obj3.name = "update";
+obj3.arr[1] = [5,6,7] ; // 新旧对象还是共享同一块内存
+
+console.log('obj1',obj1) // obj1 { name: 'init',  arr: [ 1, [ 5, 6, 7 ], 4 ] }
+console.log('obj3',obj3) // obj3 { name: 'update', arr: [ 1, [ 5, 6, 7 ], 4 ] }
+```
+
+但深拷贝会另外创造一个一模一样的对象，新对象跟原对象不共享内存，修改新对象不会改到原对象
+
+```
+// 深拷贝
+const obj1 = {
+    name : 'init',
+    arr : [1,[2,3],4],
+};
+const obj4=deepClone(obj1) // 一个深拷贝方法
+obj4.name = "update";
+obj4.arr[1] = [5,6,7] ; // 新对象跟原对象不共享内存
+
+console.log('obj1',obj1) // obj1 { name: 'init', arr: [ 1, [ 2, 3 ], 4 ] }
+console.log('obj4',obj4) // obj4 { name: 'update', arr: [ 1, [ 5, 6, 7 ], 4 ] }
+```
+
+### 小结
+
+前提为拷贝类型为引用类型的情况下：
+
+- 浅拷贝是拷贝一层，属性为对象时，浅拷贝是复制，两个对象指向同一个地址
+- 深拷贝是递归拷贝深层次，属性为对象时，深拷贝是新开栈，两个对象指向不同的地址
+
+
+
+# 6.说说你对闭包的理解？闭包使用场景
+
+## 一、是什么
+
+**一个函数和对其周围状态（lexical environment，词法环境）的引用捆绑在一起（或者说函数被引用包围），这样的组合就是闭包（closure）**
+
+也就是说，闭包让你可以在一个内层函数中访问到其外层函数的作用域
+
+在 `JavaScript `中，每当创建一个函数，闭包就会在函数创建的同时被创建出来，作为函数内部与外部连接起来的一座桥梁
+
+下面给出一个简单的例子
+
+```
+function init() {
+    var name = "Mozilla"; // name 是一个被 init 创建的局部变量
+    function displayName() { // displayName() 是内部函数，一个闭包
+        alert(name); // 使用了父函数中声明的变量
+    }
+    displayName();
+}
+init();
+```
+
+`displayName()` 没有自己的局部变量。然而，由于闭包的特性，它可以访问到外部函数的变量
+
+## 二、使用场景
+
+任何闭包的使用场景都离不开这两点：
+
+- 创建私有变量
+- 延长变量的生命周期
+
+> 一般函数的词法环境在函数返回后就被销毁，但是闭包会保存对创建时所在词法环境的引用，即便创建时所在的执行上下文被销毁，但创建时所在词法环境依然存在，以达到延长变量的生命周期的目的
+
+下面举个例子：
+
+在页面上添加一些可以调整字号的按钮
+
+```
+function makeSizer(size) {
+  return function() {
+    document.body.style.fontSize = size + 'px';
+  };
+}
+
+var size12 = makeSizer(12);
+var size14 = makeSizer(14);
+var size16 = makeSizer(16);
+
+document.getElementById('size-12').onclick = size12;
+document.getElementById('size-14').onclick = size14;
+document.getElementById('size-16').onclick = size16;
+```
+
+### 柯里化函数
+
+柯里化的目的在于避免频繁调用具有相同参数函数的同时，又能够轻松的重用
+
+```
+// 假设我们有一个求长方形面积的函数
+function getArea(width, height) {
+    return width * height
+}
+// 如果我们碰到的长方形的宽老是10
+const area1 = getArea(10, 20)
+const area2 = getArea(10, 30)
+const area3 = getArea(10, 40)
+
+// 我们可以使用闭包柯里化这个计算面积的函数
+function getArea(width) {
+    return height => {
+        return width * height
+    }
+}
+
+const getTenWidthArea = getArea(10)
+// 之后碰到宽度为10的长方形就可以这样计算面积
+const area1 = getTenWidthArea(20)
+
+// 而且如果遇到宽度偶尔变化也可以轻松复用
+const getTwentyWidthArea = getArea(20)
+```
+
+### 使用闭包模拟私有方法
+
+在`JavaScript`中，没有支持声明私有变量，但我们可以使用闭包来模拟私有方法
+
+下面举个例子：
+
+```
+var Counter = (function() {
+  var privateCounter = 0;
+  function changeBy(val) {
+    privateCounter += val;
+  }
+  return {
+    increment: function() {
+      changeBy(1);
+    },
+    decrement: function() {
+      changeBy(-1);
+    },
+    value: function() {
+      return privateCounter;
+    }
+  }
+})();
+
+var Counter1 = makeCounter();
+var Counter2 = makeCounter();
+console.log(Counter1.value()); /* logs 0 */
+Counter1.increment();
+Counter1.increment();
+console.log(Counter1.value()); /* logs 2 */
+Counter1.decrement();
+console.log(Counter1.value()); /* logs 1 */
+console.log(Counter2.value()); /* logs 0 */
+```
+
+上述通过使用闭包来定义公共函数，并令其可以访问私有函数和变量，这种方式也叫模块方式
+
+两个计数器 `Counter1` 和 `Counter2` 是维护它们各自的独立性的，每次调用其中一个计数器时，通过改变这个变量的值，会改变这个闭包的词法环境，不会影响另一个闭包中的变量
+
+### 其他
+
+例如计数器、延迟调用、回调等闭包的应用，其核心思想还是创建私有变量和延长变量的生命周期
+
+## 三、注意事项
+
+如果不是某些特定任务需要使用闭包，在其它函数中创建函数是不明智的，因为闭包在处理速度和内存消耗方面对脚本性能具有负面影响
+
+例如，在创建新的对象或者类时，方法通常应该关联于对象的原型，而不是定义到对象的构造器中。
+
+原因在于每个对象的创建，方法都会被重新赋值
+
+```
+function MyObject(name, message) {
+  this.name = name.toString();
+  this.message = message.toString();
+  this.getName = function() {
+    return this.name;
+  };
+
+  this.getMessage = function() {
+    return this.message;
+  };
+}
+```
+
+上面的代码中，我们并没有利用到闭包的好处，因此可以避免使用闭包。修改成如下：
+
+```
+function MyObject(name, message) {
+  this.name = name.toString();
+  this.message = message.toString();
+}
+MyObject.prototype.getName = function() {
+  return this.name;
+};
+MyObject.prototype.getMessage = function() {
+  return this.message;
+};
+```
+
+# 7.说说 JavaScript 中内存泄漏的几种情况？
+
+## 一、是什么
+
+内存泄漏（Memory leak）是在计算机科学中，由于疏忽或错误造成程序未能释放已经不再使用的内存
+
+并非指内存在物理上的消失，而是应用程序分配某段内存后，由于设计错误，导致在释放该段内存之前就失去了对该段内存的控制，从而造成了内存的浪费
+
+程序的运行需要内存。只要程序提出要求，操作系统或者运行时就必须供给内存
+
+对于持续运行的服务进程，必须及时释放不再用到的内存。否则，内存占用越来越高，轻则影响系统性能，重则导致进程崩溃
+
+[![img](https://camo.githubusercontent.com/215ec2a1a4ec849bb60345c90c37f3afd20000de06f9ff09119f53d9f178f2e0/68747470733a2f2f7374617469632e7675652d6a732e636f6d2f35366434626439302d383231632d313165622d616239302d6439616538313462323430642e706e67)](https://camo.githubusercontent.com/215ec2a1a4ec849bb60345c90c37f3afd20000de06f9ff09119f53d9f178f2e0/68747470733a2f2f7374617469632e7675652d6a732e636f6d2f35366434626439302d383231632d313165622d616239302d6439616538313462323430642e706e67)
+
+在`C`语言中，因为是手动管理内存，内存泄露是经常出现的事情。
+
+```
+char * buffer;
+buffer = (char*) malloc(42);
+
+// Do something with buffer
+
+free(buffer);
+```
+
+上面是 C 语言代码，`malloc`方法用来申请内存，使用完毕之后，必须自己用`free`方法释放内存。
+
+这很麻烦，所以大多数语言提供自动内存管理，减轻程序员的负担，这被称为"垃圾回收机制"
+
+## 二、垃圾回收机制
+
+Javascript 具有自动垃圾回收机制（GC：Garbage Collecation），也就是说，执行环境会负责管理代码执行过程中使用的内存
+
+原理：垃圾收集器会定期（周期性）找出那些不在继续使用的变量，然后释放其内存
+
+通常情况下有两种实现方式：
+
+- 标记清除
+- 引用计数
+
+### 标记清除
+
+`JavaScript`最常用的垃圾收回机制
+
+当变量进入执行环境是，就标记这个变量为“进入环境“。进入环境的变量所占用的内存就不能释放，当变量离开环境时，则将其标记为“离开环境“
+
+垃圾回收程序运行的时候，会标记内存中存储的所有变量。然后，它会将所有在上下文中的变量，以及被在上下文中的变量引用的变量的标记去掉
+
+在此之后再被加上标记的变量就是待删除的了，原因是任何在上下文中的变量都访问不到它们了
+
+随后垃圾回收程序做一次内存清理，销毁带标记的所有值并收回它们的内存
+
+举个例子：
+
+```
+var m = 0,n = 19 // 把 m,n,add() 标记为进入环境。
+add(m, n) // 把 a, b, c标记为进入环境。
+console.log(n) // a,b,c标记为离开环境，等待垃圾回收。
+function add(a, b) {
+  a++
+  var c = a + b
+  return c
+}
+```
+
+### 引用计数
+
+语言引擎有一张"引用表"，保存了内存里面所有的资源（通常是各种值）的引用次数。如果一个值的引用次数是`0`，就表示这个值不再用到了，因此可以将这块内存释放
+
+如果一个值不再需要了，引用数却不为`0`，垃圾回收机制无法释放这块内存，从而导致内存泄漏
+
+```
+const arr = [1, 2, 3, 4];
+console.log('hello world');
+```
+
+面代码中，数组`[1, 2, 3, 4]`是一个值，会占用内存。变量`arr`是仅有的对这个值的引用，因此引用次数为`1`。尽管后面的代码没有用到`arr`，它还是会持续占用内存
+
+如果需要这块内存被垃圾回收机制释放，只需要设置如下：
+
+```
+arr = null
+```
+
+通过设置`arr`为`null`，就解除了对数组`[1,2,3,4]`的引用，引用次数变为 0，就被垃圾回收了
+
+### 小结
+
+有了垃圾回收机制，不代表不用关注内存泄露。那些很占空间的值，一旦不再用到，需要检查是否还存在对它们的引用。如果是的话，就必须手动解除引用
+
+## 三、常见内存泄露情况
+
+意外的全局变量
+
+```
+function foo(arg) {
+    bar = "this is a hidden global variable";
+}
+```
+
+另一种意外的全局变量可能由 `this` 创建：
+
+```
+function foo() {
+    this.variable = "potential accidental global";
+}
+// foo 调用自己，this 指向了全局对象（window）
+foo();
+```
+
+上述使用严格模式，可以避免意外的全局变量
+
+定时器也常会造成内存泄露
+
+```
+var someResource = getData();
+setInterval(function() {
+    var node = document.getElementById('Node');
+    if(node) {
+        // 处理 node 和 someResource
+        node.innerHTML = JSON.stringify(someResource));
+    }
+}, 1000);
+```
+
+如果`id`为Node的元素从`DOM`中移除，该定时器仍会存在，同时，因为回调函数中包含对`someResource`的引用，定时器外面的`someResource`也不会被释放
+
+包括我们之前所说的闭包，维持函数内局部变量，使其得不到释放
+
+```
+function bindEvent() {
+  var obj = document.createElement('XXX');
+  var unused = function () {
+    console.log(obj, '闭包内引用obj obj不会被释放');
+  };
+  obj = null; // 解决方法
+}
+```
+
+没有清理对`DOM`元素的引用同样造成内存泄露
+
+```
+const refA = document.getElementById('refA');
+document.body.removeChild(refA); // dom删除了
+console.log(refA, 'refA'); // 但是还存在引用能console出整个div 没有被回收
+refA = null;
+console.log(refA, 'refA'); // 解除引用
+```
+
+包括使用事件监听`addEventListener`监听的时候，在不监听的情况下使用`removeEventListener`取消对事件监听
+
+## 参考文献
+
+- http://www.ruanyifeng.com/blog/2017/04/memory-leak.html
+- https://zh.wikipedia.org/wiki
+
